fix: overflow inside colum

--- a/assets/js/blocks/attribute-filter/style.scss
+++ b/assets/js/blocks/attribute-filter/style.scss
@@ -27,6 +27,7 @@
 	.wc-block-attribute-filter-dropdown {
 		flex-grow: 1;
 		max-width: unset;
+		width: 0;
 	}
 
 	.is-single .wc-block-attribute-filter-list-count,
